fix: extra padding bce-color reset button

--- a/packages/core/src/components/bce-color/bce-color.scss
+++ b/packages/core/src/components/bce-color/bce-color.scss
@@ -108,7 +108,7 @@
     @include bce-color-inherit();
     position: absolute;
     right: 2px;
-    bottom: -28px;
+    bottom: -29px;
   }
 }
 
